--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.14",
-    "prettier": "2.3.2"
+    "prettier": "^2.4.1"
   }
 }
